objects/Opportunity_Task_Definition__c/Opportunity_Task_Definition__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Opportunity Task Definition</label>
</CustomObject>