objects/Opportunity_Task_Definition__c/fields/Task_Reminder_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Task_Reminder_Date_Offset__c</fullName>
    <label>Task Reminder Date Offset</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>