objects/Opportunity_Task_Definition__c/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <label>Task Subject</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>