objects/Opportunity_Task_Definition__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>