objects/Opportunity_Task_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Activity_Date_Offset__c</columns>
    <columns>Task_Description__c</columns>
    <columns>Task_Reminder_Date_Offset__c</columns>
    <columns>Task_Subject__c</columns>
    <columns>Task_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>